WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290656
AppSSO should not hang the main thread
https://bugs.webkit.org/show_bug.cgi?id=290656
Summary
AppSSO should not hang the main thread
pascoe@apple.com
Reported
2025-03-28 15:33:02 PDT
AppSSO currently uses SPI that hangs the main thread, we should move towards SPI that doesn't do that.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2025-03-28 15:33:10 PDT
rdar://133093114
pascoe@apple.com
Comment 2
2025-03-28 15:36:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43216
EWS
Comment 3
2025-04-04 14:20:30 PDT
Committed
293270@main
(1730f65980c9): <
https://commits.webkit.org/293270@main
> Reviewed commits have been landed. Closing PR #43216 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug