AppSSO should not hang the main thread rdar://133093114 https://bugs.webkit.org/show_bug.cgi?id=290656

Reviewed by Charlie Wolfe and Ben Nham.

AppSSO currently performs a sync call that ends up hanging the main thread.
We have been provided equivalent SPI that does not hang the main thread, this
patch moves to using that.

Updated API test infrastructure and all existing tests pass.

* Source/WebCore/PAL/pal/spi/cocoa/AppSSOSPI.h:
* Source/WebKit/UIProcess/Cocoa/SOAuthorization/SOAuthorizationCoordinator.h:
* Source/WebKit/UIProcess/Cocoa/SOAuthorization/SOAuthorizationCoordinator.mm:
(WebKit::SOAuthorizationCoordinator::canAuthorize):
(WebKit::SOAuthorizationCoordinator::tryAuthorize):
(WebKit::SOAuthorizationCoordinator::canAuthorize const): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SOAuthorizationTests.mm:
(overrideCanPerformAuthorizationWithURL):
(TestWebKitAPI::TEST(SOAuthorizationRedirect, InterceptionError)):

Canonical link: https://commits.webkit.org/293270@main